# Project_ramp_up

./: README.md
MiniProject/: README.md
MiniProject/Source/Shared_Object/: CMakeLists.txt
MiniProject/Source/Shared_Object/src/: shared_object.cpp
MiniProject/Source/worker/include/: worker.h
MiniProject/Source/worker/src/: worker.cpp
MiniProject/UnitTest/: Unit_test.cpp
Samples/CPP/callback/: callback.cpp
Samples/CPP/fn_placeholder/: fn_place_holder.cpp
Samples/CPP/init_list/: most_vexing_parse_issue.cpp  most_vexing_parse_issue_V2.cpp  push_back_Vs_emplace_back.cpp
Samples/CPP/lemda_function/: lamde_fn.cpp
Samples/CPP/lvaue_rvalue/: example2.cpp
Samples/CPP/protobuf/: main.cpp  read.cpp  test.proto
Samples/CPP/ptr/: enable_shared_frm_this.cpp  pointer_ex1.Valgind  pointer_ex1.cpp  pointer_ex2.cpp  pointer_ex3.Valgind  pointer_ex3.cpp
Samples/CPP/templates/: Varodic_class.cpp  varodic_tampltes.cpp
Samples/Python/: referances.txt
Samples/Python/callback/: callback.py  processor_report.txt
Samples/Python/class/: test.py
Samples/Python/pytest/: test_BasicsOfTestFixture.py  test_BasicsOfTestFixtureV2.py  test_BasicsOfTestFixtureV3.py  test_BasicsOfTestFixtureV4.py  test_BasicsOfTestFixtureV5.py  test_basicsOfPytest.py
Source/: CMakeLists.txt
Source/Shared_Object/: CMakeLists.txt
Source/Shared_Object/include/: shared_object.h
Source/Shared_Object/src/: shared_object.cpp
Source/main_app/: main.cpp
Source/worker/: CMakeLists.txt
Source/worker/include/: worker.h
Source/worker/src/: worker.cpp
UnitTest/: Unit_test.cpp
